--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,11 @@
       "prefix": "app",
       "schematics": {
         "@schematics/angular:component": {
+          "prefix": "fm",
           "styleext": "less"
+        },
+        "@schematics/angular:directive": {
+          "prefix": "fm"
         }
       },
       "architect": {
